--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "postify-db",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "migrate:dev": "npx prisma migrate dev --name",
@@ -13,43 +13,19 @@
   "_moduleAliases": {
     "@": "dist/src/*"
   },
+  "files": [
+    "/dist"
+  ],
+  "types": "dist/index.d.ts",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.7.6",
-    "@types/passport": "^1.0.11",
-    "@types/passport-twitter": "^1.0.37",
-    "prisma": "^4.8.0",
-    "ts-node": "^10.9.1",
-    "tsc-watch": "^5.0.3",
-    "tsconfig-paths": "^4.1.1",
-    "typescript": "^4.7.4"
+    "prisma": "^4.8.0"
   },
   "dependencies": {
     "@prisma/client": "^4.2.1",
-    "@superfaceai/passport-twitter-oauth2": "^1.2.2",
-    "@types/body-parser": "^1.19.2",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/cookie-session": "^2.0.44",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/express-session": "^1.17.5",
-    "@types/passport-oauth2": "^1.4.11",
-    "Babel": "^0.0.1",
-    "body-parser": "^1.20.1",
-    "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3",
-    "module-alias": "^2.2.2",
-    "openai": "^3.1.0",
-    "passport": "^0.6.0",
-    "passport-oauth2": "^1.6.1",
-    "passport-twitter": "^1.0.4",
-    "ts-node-dev": "^2.0.0",
-    "twitter-api-v2": "^1.13.0"
+    "dotenv": "^16.0.3"
   }
 }
