--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,9 @@
 {
-  "ts-node": {
-    "require": ["tsconfig-paths/register"]
-  },
   "compilerOptions": {
-    "sourceMap": true,
-    "outDir": "dist",
-    "strict": true,
-    "lib": ["esnext"],
-    "esModuleInterop": true,
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"],
-      "*": ["node_modules/*"]
-    }
+    "module": "commonjs",
+    "target": "es2015",
+    "declaration": true,
+    "outDir": "./dist"
   },
-  "include": ["./**/*"]
+  "include": ["src/**/*"]
 }
